work/jobs/MultiJob the First/builds/17/log
Started by user [8mha:AAAAlh+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzOEgYu/dLi1CL9vNKcHACFIKlWvwAAAA==[0manonymous
[EnvInject] - Loading node environment variables.
Building in workspace C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace
Run condition [Not] preventing prebuild for step [Execute Windows batch command]
Run condition [Not] preventing prebuild for step [Execute Windows batch command]
Run condition [File exists] enabling prebuild for step [Execute Windows batch command]
[File exists] check if file exists [Main.java]
Run condition [Not] enabling perform for step [Execute Windows batch command]
[workspace] $ cmd /c call C:\Users\ribe\AppData\Local\Temp\hudson5607446424676934854.bat

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo public class Main {  1>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo public static void main(String[] args){  1>>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo if (args.length > 0 && args[0] == true) System.exit(1);   1>>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo System.out.println("wawa I'm a string");   1>>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo System.out.println("and I'm loving it");  1>>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo }  1>>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>echo }  1>>Main.java 

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>exit 0 
[File exists] check if file exists [Main.class]
Run condition [Not] enabling perform for step [Execute Windows batch command]
[workspace] $ cmd /c call C:\Users\ribe\AppData\Local\Temp\hudson3244190831252582736.bat

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>javac Main.java 
Main.java:3: error: incomparable types: String and boolean
if (args.length > 0 && args[0] == true) System.exit(1);  
                               ^
1 error

C:\dev\workspace-the-second\nextbuildestimatedduration\work\jobs\MultiJob the First\workspace>exit 1 
Build step 'Conditional step (single)' marked build as failure
Finished: FAILURE
